--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,4 +117,6 @@ dependencies {
     implementation 'com.zzhoujay.richtext:richtext:3.0.7'
     //引入jsoup
     implementation 'org.jsoup:jsoup:1.10.1'
+    //第三方播放器
+    compile 'cn.jzvd:jiaozivideoplayer:7.0.4'
 }
