--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -164,6 +164,12 @@
         <activity android:name=".ui.activity.fgt.partyaffairs.act.Act_LectureDetails"
             android:label="@string/LectureDetails_name"
             />
+        <activity android:name=".ui.activity.fgt.partyaffairs.act.Act_WritingExperience"
+            android:label="@string/WritingExperience_name"
+            />
+        <activity android:name=".ui.activity.fgt.partyaffairs.act.Act_Drafts"
+            android:label="@string/Drafts_name"
+            />
     </application>
 
 </manifest>
